--- a/dashboard.html
+++ b/dashboard.html
@@ -370,6 +370,21 @@
       font-weight: 600;
     }
 
+    /* Single item helper text */
+    .single-item-helper {
+      color: #64748B;
+      font-size: 0.875rem;
+      margin-bottom: 1.5rem;
+      padding: 0.75rem 1rem;
+      background: #FFFBEB;
+      border-radius: 8px;
+      border: 1px solid #FDE68A;
+    }
+    .single-item-helper i {
+      color: #F59E0B;
+      margin-right: 0.5rem;
+    }
+
     @media (max-width: 768px) {
       .main-with-sidebar { margin-left: 0; padding: 1.5rem; padding-top: 5rem; }
       .header-bar { flex-direction: column; align-items: flex-start; }
@@ -387,7 +402,7 @@
     <div class="header-bar">
       <div class="header-left">
         <h1>Create Products</h1>
-        <p>Register products for supply chain tracking and customer verification.</p>
+        <p>Mint products, documents, certificates, or any data to the blockchain for permanent verification.</p>
       </div>
       <div class="header-right">
         <div class="quick-links">
@@ -447,6 +462,13 @@
           <div class="toggle-switch-slider"></div>
         </div>
       </div>
+
+      <!-- Single Item Helper Text - NEW -->
+      <p class="single-item-helper">
+        <i class="fas fa-lightbulb"></i>
+        <strong>Just need one QR code?</strong> Skip the toggles and fill out the form below. 
+        It doesn't have to be a product—mint anything: documents, certificates, artwork, event tickets, or any data point you want permanently verified.
+      </p>
 
       <!-- Batch Section (quantity input + Excel option below) -->
       <div class="expandable-section batch" id="batchSection">
@@ -523,8 +545,8 @@
       <!-- Manual Entry Form (hidden when Excel mode is on) -->
       <div id="manualEntryForm">
         <div class="form-group">
-          <label for="dashProdName" id="prodNameLabel">Product Name *</label>
-          <input id="dashProdName" type="text" placeholder="e.g. Organic Honey" />
+          <label for="dashProdName" id="prodNameLabel">Name *</label>
+          <input id="dashProdName" type="text" placeholder="e.g. Organic Honey, Certificate #1042, Event Ticket" />
         </div>
         
         <div class="form-group" id="skuGroup">
@@ -677,8 +699,8 @@
         skuInput.placeholder = 'Leave blank to auto-generate';
         skuBatchOptions.style.display = 'none';
         skuSingleHelp.style.display = 'block';
-        prodNameLabel.textContent = 'Product Name *';
-        prodNameInput.placeholder = 'e.g. Organic Honey';
+        prodNameLabel.textContent = 'Name *';
+        prodNameInput.placeholder = 'e.g. Organic Honey, Certificate #1042, Event Ticket';
         document.getElementById('remainingQRs').textContent = '';
         clearExcelUpload();
       }
@@ -1101,7 +1123,7 @@
       const batchQuantity = isBatchMode ? parseInt(document.getElementById('batchQuantity').value) : 1;
       
       if (!productName) {
-        msgEl.innerHTML = '<div class="message error"><i class="fas fa-exclamation-circle"></i> Product name required.</div>';
+        msgEl.innerHTML = '<div class="message error"><i class="fas fa-exclamation-circle"></i> Name is required.</div>';
         return;
       }
 
