--- a/pharma-generate.html
+++ b/pharma-generate.html
@@ -1015,11 +1015,11 @@
                       <i class="fas fa-user"></i> Customer QR
                     </a>
                   ` : ''}
-                  ${product.gs1QrUrl || product.inventory_qr_code_ipfs_hash ? `
-                    <a href="${product.gs1QrUrl || 'https://gateway.pinata.cloud/ipfs/' + product.inventory_qr_code_ipfs_hash}" class="btn btn-secondary" target="_blank" style="font-size: 0.8rem; padding: 0.5rem 0.75rem;">
-                      <i class="fas fa-barcode"></i> GS1 QR
-                    </a>
-                  ` : ''}
+                ${product.gs1QrCodeUrl ? `
+  <a href="${product.gs1QrCodeUrl}" class="btn btn-secondary" target="_blank" style="font-size: 0.8rem; padding: 0.5rem 0.75rem;">
+    <i class="fas fa-barcode"></i> GS1 QR
+  </a>
+` : ''}
                 </div>
               </div>
             `;
