--- a/register.html
+++ b/register.html
@@ -332,7 +332,7 @@
         <label for="businessType">Business Type <span style="color: #DC2626;">*</span></label>
         <select id="businessType" required>
           <option value="">Select your business type</option>
-          <option value="general">General Business</option>
+          <option value="general">Non-Pharma Business</option>
           <option value="pharma">Pharmaceutical Business</option>
         </select>
         <div class="business-type-info">
