--- a/use-cases.html
+++ b/use-cases.html
@@ -590,7 +590,7 @@
       <div class="industry-focus-content">
         <h2>Two Solutions. Every Industry.</h2>
         <p>
-          We offer specialized pharmaceutical compliance software for FDA DSCSA requirements, plus a flexible general business solution for any industry fighting counterfeits and building customer trust.
+          We offer specialized pharmaceutical compliance software for FDA DSCSA requirements, plus a flexible solution for any other industry fighting counterfeits and building customer trust.
         </p>
       </div>
     </section>
@@ -618,10 +618,10 @@
             </div>
           </a>
 
-          <!-- General Business - Expandable -->
+          <!-- Non-Pharma Business - Expandable -->
           <div class="solution-card general" onclick="toggleGeneralIndustries()">
             <div class="solution-icon">🏢</div>
-            <h3>General Business</h3>
+            <h3>Non-Pharma Business</h3>
             <p>
               Product verification for any industry. Smart QR codes, blockchain authentication, and customer-facing verification pages. Perfect for luxury goods, food & beverage, electronics, cannabis, and more.
             </p>
