--- a/index.html
+++ b/index.html
@@ -476,6 +476,11 @@
       margin-bottom: 0.25rem;
     }
 
+    .trust-number-symbol {
+      font-size: 4rem;
+      line-height: 1;
+    }
+
     .trust-label {
       color: #94a3b8;
       font-size: 0.95rem;
@@ -849,7 +854,7 @@
             <div class="trust-label">Tamper-Proof</div>
           </div>
           <div class="trust-item">
-            <div class="trust-number">∞</div>
+            <div class="trust-number trust-number-symbol">∞</div>
             <div class="trust-label">Permanent</div>
           </div>
           <div class="trust-item">
