--- a/pricing-hub.html
+++ b/pricing-hub.html
@@ -340,10 +340,10 @@
     <!-- Pricing Cards -->
     <div class="cards-container">
       
-      <!-- General Business Card -->
+      <!-- Non-Pharmaceutical Business Card -->
       <a href="pricing-public.html" class="pricing-card">
         <div class="card-icon">📦</div>
-        <h2 class="card-title">General Business</h2>
+        <h2 class="card-title">Non-Pharmaceutical Business</h2>
         <p class="card-subtitle">
           For brands, retailers, and manufacturers who need reliable product tracking
         </p>
