--- a/pharma-dashboard.html
+++ b/pharma-dashboard.html
@@ -517,7 +517,7 @@
           <div class="action-options">
             <label class="action-option">
               <input type="radio" name="quick-action" value="generate" checked>
-              <span>Generate QR Codes</span>
+              <span>Create Products</span>
             </label>
             <label class="action-option">
               <input type="radio" name="quick-action" value="receive">
